# GSoC17

./: CMakeLists.txt  README.md
bindings/: Container.cpp  PyAlgorithm.cpp  PyContainer.cpp  PyContainerWrapper.cpp  PyFunctionWrapper.cpp  PyFunctionWrapperBase.cpp
include/: Algorithm.h  FunctionWrapper.h  FunctionWrapperBase.h  Types.h  Vector3R.h  Vector4R.h
